--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1-Passport-Example",
+  "name": "1-passport-example",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -31,5 +31,13 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bcancel91/Project_2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bcancel91/Project_2/issues"
+  },
+  "homepage": "https://github.com/bcancel91/Project_2#readme"
 }
