--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "wwtwP1320",
     "database": "passport_demo",
     "host": "127.0.0.1",
     "dialect": "mysql"
