--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "gt2020",
-    "database": "passport_demo",
+    "password": "",
+    "database": "gq",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
