--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "gt2020",
+    "password": "tech1991",
     "database": "gq",
     "host": "127.0.0.1",
     "dialect": "mysql"
