--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,6 @@
     "database": "gq",
     "host": "127.0.0.1",
     "dialect": "mysql"
-    
   },
   "test": {
     "username": "root",
@@ -15,10 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
